Bug 268149 - KDE does not hibernate/suspend/shutdown when battery is critical low
Summary: KDE does not hibernate/suspend/shutdown when battery is critical low
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-daemon (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-10 20:05 UTC by Ralf Hemmenstaedt
Modified: 2011-03-11 22:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Hemmenstaedt 2011-03-10 20:05:33 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

Powerdevil can be configured to automatically hibernate, suspend or shutdown a laptop if its battery reaches the definable critical level, i.e. a remaining charge of 5 %.

Since KDE 4.6.0 this feature does not work as expected. The screen gets locked but nothing else happens, whatever setting is used (hibernate, suspend or shutdown).

This bug can cause data loss on every laptop running on battery if leaved unattended.

This bug was originally reported by Rafael Belmonte on bugzilla.novell.com

https://bugzilla.novell.com/show_bug.cgi?id=675405


Reproducible: Always

Steps to Reproduce:
Go to "Advanced Battery Settings", choose "hibernate" as the action, set the battery critical level to the actual charge - 1%, disconnect the ac adapter and wait.
Comment 1 Lamarque V. Souza 2011-03-11 22:10:17 UTC
Git commit 0069abf1e4531df4389add699ff048f2a2776d41 by Lamarque V. Souza.
Committed on 11/03/2011 at 22:08.
Pushed by lvsouza into branch 'KDE/4.6'.

iSend the correct suspend type mode for suspendSession action.

BUG: 268149
FIXED-IN: 4.6.2

M  +3    -1    powerdevil/daemon/actions/bundled/handlebuttonevents.cpp     

http://commits.kde.org/kde-workspace/0069abf1e4531df4389add699ff048f2a2776d41
Comment 2 Lamarque V. Souza 2011-03-11 22:10:17 UTC
Git commit 27eab7e73722282de09a82992b380522a0aef246 by Lamarque V. Souza.
Committed on 11/03/2011 at 21:59.
Pushed by lvsouza into branch 'master'.

Send the correct suspend type mode for suspendSession action.

BUG: 268149
FIXED-IN: 4.6.2

M  +3    -1    powerdevil/daemon/actions/bundled/handlebuttonevents.cpp     

http://commits.kde.org/kde-workspace/27eab7e73722282de09a82992b380522a0aef246