Send the correct suspend type mode for suspendSession action.

BUG: 268149
FIXED-IN: 4.6.2